--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="red">#FF0000</color>
     <color name="white">#FFFFFF</color>
     <color name="hyperlink_blue">#0000FF</color>
+    <color name="purple">#800080</color>
 
 </resources>
