Similar artist list in artist display now takes user to the search screen with the artist's name in the edit text box.  This also works with the aritsts performing in the upcoming concerts.

--- a/app/src/main/res/layout/holder_simple_artist_list.xml
+++ b/app/src/main/res/layout/holder_simple_artist_list.xml
@@ -12,6 +12,7 @@
         android:textColor="@color/white"
         android:background="@drawable/recyclecustomborder_1"
         android:layout_width="match_parent"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:onClick="listArtistClicked"/>
 
 </LinearLayout>
