--- a/app/src/main/res/layout/fragment_artist_results.xml
+++ b/app/src/main/res/layout/fragment_artist_results.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -10,14 +10,24 @@
         android:id="@+id/artist_results_checkBox"
         android:text="@string/artist_results_checkBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="50dp"/>
+
+    <ImageView
+        android:id="@+id/artist_results_imageView"
+        android:contentDescription="@string/image_content_description"
+        android:src="@drawable/powered_by_songkick"
+        android:layout_alignEnd="@+id/artist_results_checkBox"
+        android:layout_alignParentEnd="true"
+        android:layout_width="75dp"
+        android:layout_height="50dp"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/artist_results_recyclerView"
-        android:paddingTop="5dp"
+        android:paddingTop="10dp"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
+        android:layout_below="@+id/artist_results_checkBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</RelativeLayout>
