--- a/app/src/main/res/layout/holder_concert_list.xml
+++ b/app/src/main/res/layout/holder_concert_list.xml
@@ -10,6 +10,8 @@
         android:id="@+id/concert_list_textView"
         android:layout_width="match_parent"
         android:textSize="20sp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/white"
         android:gravity="center"
         android:layout_height="75dp"/>
@@ -17,9 +19,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/concert_list_recyclerView"
         android:visibility="gone"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"/>
+
     <Button
         android:id="@+id/concert_list_show_artists_button"
         android:background="@android:color/transparent"
