--- a/app/src/main/res/layout/holder_simple_list.xml
+++ b/app/src/main/res/layout/holder_simple_list.xml
@@ -7,6 +7,8 @@
 
     <TextView
         android:id="@+id/simple_list_textView"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:gravity="center"
         android:textSize="25sp"
         android:textColor="@color/white"
