--- a/app/src/main/res/layout/holder_venue_list.xml
+++ b/app/src/main/res/layout/holder_venue_list.xml
@@ -8,13 +8,17 @@
         android:id="@+id/venue_results_imageView"
         android:contentDescription="@string/image_content_description"
         android:src="@drawable/powered_by_songkick"
-        android:layout_centerInParent="true"
+        android:layout_alignParentEnd="true"
+        android:paddingStart="0dp"
+        android:paddingEnd="20dp"
         android:layout_width="75dp"
         android:layout_height="50dp"/>
 
     <TextView
         android:id="@+id/venue_results_name_textView"
         android:layout_below="@+id/venue_results_imageView"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textSize="25sp"
         android:textColor="@color/white"
         android:layout_centerInParent="true"
@@ -24,6 +28,8 @@
     <TextView
         android:id="@+id/venue_results_location_textView"
         android:layout_below="@+id/venue_results_name_textView"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:layout_centerInParent="true"
@@ -52,6 +58,8 @@
         android:id="@+id/venue_results_button"
         android:text="@string/show_details"
         android:layout_below="@+id/venue_results_phone_textView"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:layout_centerInParent="true"
         android:background="@android:color/transparent"
         android:layout_width="wrap_content"
